removed different color
hover on a dot used to show little different color than active dot
so made both same

--- a/styles/home.css
+++ b/styles/home.css
@@ -81,11 +81,8 @@
   display: inline-block;
   cursor: pointer;
 }
-.dotActive {
+.dotActive, .dot:hover {
   background-color: tomato;
-}
-.dots .dot:hover {
-  background-color: rgba(255, 99, 71, 0.55);
 }
 
 
