--- a/yamini/index.css
+++ b/yamini/index.css
@@ -75,7 +75,7 @@ body{
     background-color: grey;
 }
 .h1tag{
-    margin-top:70px;
+/*     margin-top:70px; */
     font-size: 50px;
     font-weight: 400;
     font-family: 'Merienda', cursive;
