--- a/yamini/index.css
+++ b/yamini/index.css
@@ -20,7 +20,7 @@ body{
     /* font-weight: 600; */
     padding: 6px;
     font-family: serif;
-    font-size: 1.5vw;
+/*     font-size: 1.5vw; */
     color: #5e5e5e;
 }
 .h3tag{
