--- a/saurav/gallery/gallery.css
+++ b/saurav/gallery/gallery.css
@@ -45,26 +45,29 @@ h1::before{
     background-color: rgb(243, 243, 243);
     width: 90%;
     margin: 0 auto 20px auto;
-    height: 60px;
+/*     height: 60px; */
     display: flex;
-    align-items: center;
+/*     align-items: center; */
     border-radius: 5px;
     box-shadow: 3px 3px 5px lightgray;
 }
+h3, label {
+    padding: 10px;
+}
 h3{
-    height: 100%;
+/*     height: 100%; */
     background-color: rgb(146, 143, 143);
-    line-height: 60px;
-    padding: 0 50px;
+/*     line-height: 60px; */
+/*     padding: 0 50px; */
     color: white;
 }
 label{
     display: inline-block;
     /* justify-content: center; */
     /* padding: 0 20px; */
-    height: 100px;
-    margin: 0 20px;
-    line-height: 100px;
+/*     height: 100px; */
+/*     margin: 0 20px; */
+/*     line-height: 100px; */
     font-size: 18px;
     color: gray;
     cursor: pointer;
@@ -198,7 +201,11 @@ label:hover{
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 5px;
     }
-
+}
+@media screen and (max-width: 525px) {
+    .top-content {
+        flex-direction: column;
+    }
 }
 /* 
 @media (max-width: 1000px) {
